  * Update Linux Foundation's URL for FHS. Closes: #865981
  * Rephrase sentence to ensure it will be completely converted into po
    format. Closes: #344693
  * Globally use S/390 instead of s390 for consistency. Closes: #366380.
  * Document 255 characters limit for kernel command line. Closes: #397592.
  * Document the installation of sudo, if no root password is given.
    Closes: #692314

  [ Martin Michlmayr ]
  * Remove QNAP TS-109, TS-209 and TS-409 as they are no longer supported.

 -- Samuel Thibault <sthibault@debian.org>  Tue, 20 Jun 2017 01:17:02 +0200

installation-guide (20170614) unstable; urgency=medium

  [ Holger Wansing ]
  * Updated translation for Chinese (simplified), by Yangfl
    <mmyangfl@gmail.com>.

 -- Samuel Thibault <sthibault@debian.org>  Wed, 14 Jun 2017 10:53:14 +0200

installation-guide (20170607) unstable; urgency=medium

  [ Holger Wansing ]
  * Update documentation on device nodes for CD-ROM drives. Closes: #864038
  * Set condition 'unofficial' for 'What is Debian GNU/kFreeBSD' chapter. 
    Closes: #864040

 -- Samuel Thibault <sthibault@debian.org>  Wed, 07 Jun 2017 23:05:12 +0200

installation-guide (20170525) unstable; urgency=medium

  [ Holger Wansing ]
  * Some '>' changed into '&gt;' within <informalexample> tags, to get
    them correctly processed.
  * Add missing CSS style for <tip> tag. Closes: #860180

 -- Samuel Thibault <sthibault@debian.org>  Thu, 25 May 2017 12:26:18 +0200

installation-guide (20170419) unstable; urgency=medium

  [ Samuel Thibault ]
  * Re-enable Dutch translation.  Thanks a lot to Frans Spiesschaert!
  * Document shortcuts for expert, rescue, and automated installation with
    accessibility.
  * Update distrib name about the absence of graphical installer on arm64.
  * Drop the note about USB not being supported on Mustang, that was fixed.

  [ Geert Stappers ]
  * Add header to preseed file. Closes: #859438

  [ Holger Wansing ]