@@ -38,15 +38,7 @@ often used in combination with <command>exim</command> or
 With the increasing popularity of graphical desktop systems, the use of
 graphical e-mail programs like GNOME's <command>evolution</command>,
 KDE's <command>kmail</command> or Mozilla's <command>thunderbird</command>
-(in &debian; available as <command>icedove</command><footnote>
-
-<para>
-The reason that <command>thunderbird</command> has been renamed to
-<command>icedove</command> in &debian; has to do with licensing issues.
-Details are outside the scope of this manual.
-</para>
-
-</footnote>) is becoming more popular. These programs combine the function
+has becoming more popular. These programs combine the function
 of a MUA, MTA and MDA, but can &mdash; and often are &mdash; also be used
 in combination with the traditional Linux tools.
 
