@@ -13,6 +13,7 @@ installation-guide (2017XXXX) UNRELEASED; urgency=medium
   * Document 255 characters limit for kernel command line. Closes: #397592.
   * Document the installation of sudo, if no root password is given.
     Closes: #692314
+  * Icedove was de-branded to Thunderbird (see #816679): related changings.
 
   [ Martin Michlmayr ]
   * Remove QNAP TS-109, TS-209 and TS-409 as they are no longer supported.
